set min-height to prevent view jump on re-render

--- a/src/components/character/Medias/Medias.module.scss
+++ b/src/components/character/Medias/Medias.module.scss
@@ -6,4 +6,8 @@
     justify-content: flex-end;
     @include gap($row: var(--space-500));
   }
+
+  .cardContainer {
+    min-height: 800px;
+  }
 }
